--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
 
     <string name="no_user_logged_in">No user logged in</string>
     <string name="update_user_info">Update</string>
+    <string name="your_info">Your Info</string>
     <string name="edit_name">Edit Name</string>
     <string name="edit_email">Edit Email</string>
     <string name="edit_address">Edit Address</string>
